# UniversityC

./: .gitignore  CMakeLists.txt
EinUndAusgabe/: CMakeLists.txt
GrundlagenProgrammierung/: CMakeLists.txt
Projects/EinUndAusgabe/: CMakeLists.txt  Student.h  main.c  main.h
Projects/Funktionen/: CMakeLists.txt  main.c  main.h
Projects/GrundlagenProgrammierung/: CMakeLists.txt  Player.h  main.c  main.h
Projects/Numerik/: CMakeLists.txt  main.c  main.h
Projects/ZusammengesetzteDatentypen/: CMakeLists.txt  VorlesungsInformation.h  main.c  main.h
